tests/mm0_mmu/fail/bad-sort412.mmu
-- bad modifier order
(sort s412 free pure strict)